force-app/main/default/objects/Progress_Report_Indicators__c/Progress_Report_Indicators__c.object-meta.xml
<CustomObject>
    <label>Progress Report Indicator</label>
    <nameField>
        <displayFormat>PRI-{000000}</displayFormat>
        <label>Progress Report Indicators Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Progress Report Indicators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>