force-app/main/default/objects/Progress_Report_Indicators__c/fields/Actual_Value_Currency__c.field-meta.xml
<CustomField>
    <fullName>Actual_Value_Currency__c</fullName>
    <label>Actual Value (Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>