force-app/main/default/objects/Progress_Report_Indicators__c/fields/Actual_Value_Number__c.field-meta.xml
<CustomField>
    <fullName>Actual_Value_Number__c</fullName>
    <label>Actual Value (Number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>