force-app/main/default/objects/Progress_Report_Indicators__c/fields/Actual_Value_Text__c.field-meta.xml
<CustomField>
    <fullName>Actual_Value_Text__c</fullName>
    <label>Actual Value (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>