force-app/main/default/objects/Progress_Report_Indicators__c/fields/Indicator_Catalogue__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Catalogue__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Indicator Catalogue</label>
    <referenceTo>Indicator_Catalogue__c</referenceTo>
    <relationshipLabel>Progress Report Indicators</relationshipLabel>
    <relationshipName>Progress_Report_Indicators</relationshipName>
    <type>Lookup</type>
</CustomField>