force-app/main/default/objects/Progress_Report_Indicators__c/fields/Indicator_Level__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Level__c</fullName>
    <formula>text(Indicator_Catalogue__r.Metric_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicator Level</label>
    <type>Text</type>
</CustomField>