force-app/main/default/objects/Progress_Report_Indicators__c/fields/Indicator_Name__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Name__c</fullName>
    <formula>Indicator_Catalogue__r.Metrics_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicator Name</label>
    <type>Text</type>
</CustomField>