force-app/main/default/objects/Progress_Report_Indicators__c/fields/Indicator_Type__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Type__c</fullName>
    <label>Indicator Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Text Area (Long)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>