force-app/main/default/objects/Progress_Report_Indicators__c/fields/Progress_Report__c.field-meta.xml
<CustomField>
    <fullName>Progress_Report__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Progress Report</label>
    <referenceTo>Progress_Report__c</referenceTo>
    <relationshipLabel>Progress Report Indicators</relationshipLabel>
    <relationshipName>Progress_Report_Indicators</relationshipName>
    <type>Lookup</type>
</CustomField>