force-app/main/default/objects/Progress_Report_Indicators__c/fields/Target_Value_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Target_Value_Percentage__c</fullName>
    <label>Target Value (Percentage)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>