force-app/main/default/objects/Progress_Report_Indicators__c/fields/Target_Value_Text__c.field-meta.xml
<CustomField>
    <fullName>Target_Value_Text__c</fullName>
    <label>Target Value (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>