force-app/main/default/objects/Progress_Report_Indicators__c/fields/Target_Value_Text_Area_Long__c.field-meta.xml
<CustomField>
    <fullName>Target_Value_Text_Area_Long__c</fullName>
    <label>Target Value (Text Area Long)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>