force-app/main/default/objects/Progress_Report_Indicators__c/fields/Value_currency__c.field-meta.xml
<CustomField>
    <fullName>Value_currency__c</fullName>
    <label>Value (currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>