force-app/main/default/objects/Progress_Report_Indicators__c/fields/Value_number__c.field-meta.xml
<CustomField>
    <fullName>Value_number__c</fullName>
    <label>Value (number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>