force-app/main/default/objects/Progress_Report_Indicators__c/fields/Value_Text_Area__c.field-meta.xml
<CustomField>
    <fullName>Value_Text_Area__c</fullName>
    <label>Value (Text Area)</label>
    <type>TextArea</type>
</CustomField>