force-app/main/default/objects/Progress_Report_Indicators__c/fields/Variance_Value_Currency__c.field-meta.xml
<CustomField>
    <fullName>Variance_Value_Currency__c</fullName>
    <formula>Actual_Value_Currency__c - Target_Value_Currency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance Value (Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>