force-app/main/default/objects/Progress_Report_Indicators__c/fields/Variance_Value_Number__c.field-meta.xml
<CustomField>
    <fullName>Variance_Value_Number__c</fullName>
    <formula>Actual_Value_Number__c - Target_Value_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance Value (Number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>