force-app/main/default/objects/Progress_Report_Indicators__c/fields/Variance_Value_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Variance_Value_Percentage__c</fullName>
    <formula>Actual_Value_Percentage__c - Target_Value_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance Value (Percentage)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>