force-app/main/default/objects/Progress_Report_Indicators__c/fields/Variance_Value_Text__c.field-meta.xml
<CustomField>
    <fullName>Variance_Value_Text__c</fullName>
    <label>Variance Value (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>