force-app/main/default/objects/Progress_Report_Indicators__c/validationRules/Indicator_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Indicator_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNULL(Indicator_Catalogue__c)),  TEXT(Indicator_Type__c) != TEXT(Indicator_Catalogue__r.Indicator_Type__c))</errorConditionFormula>
    <errorDisplayField>Indicator_Type__c</errorDisplayField>
    <errorMessage>Indicator Type must be the same as the one on the related Indicator Catalogue</errorMessage>
</ValidationRule>