force-app/main/default/objects/Progress_Report_Indicators__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Indicator_Catalogue__c</columns>
    <columns>Indicator_Level__c</columns>
    <columns>Indicator_Name__c</columns>
    <columns>Indicator_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>